feat: sonarqube fixes